Fixed spacing and button

--- a/main.css
+++ b/main.css
@@ -4,6 +4,11 @@
 	margin: 0;
 }
 
+html{
+	overflow-x: hidden;
+	height: 100%;
+}
+
 body {
 	background-color: #C4C4C4;
 	font-family: "Averia Serif Libre", cursive;
@@ -26,24 +31,22 @@ h1,h2 {
 }
 
 h1 {
-	margin-top: 25vh;
+	margin-top: 20vh;
 	font-size: 8rem;
 	font-weight: normal;
 }
 
 h2 {
 	font-size: 1.5rem;
-	margin-top: 16px;
+	margin-top: 8px;
 	margin-bottom: 32px;
 }
 
 
 .container {
-	min-height: 100vh;
+	/*min-height: 100vh;*/
 	display: flex;
-	/*flex-direction: column;*/
 	justify-content: center;
-	/*align-items: center;*/
 	text-align: center;
 	margin: 0 16px 0 16px;
 }
@@ -67,12 +70,13 @@ h2 {
 	cursor: pointer;
 	border: 2px solid black;
 	border-radius: 6px;
-	box-shadow: inset 0 0 0 0 white;
+	box-shadow: inset 0 0 0 0 #303030;
 	transition: ease-out 0.3s;
 }
 
 .btnTalk:hover {
-	box-shadow: inset 125px 0 0 0 white;
+	box-shadow: inset 125px 0 0 0 #303030;
+	color: white;
 	transition: ease-out 0.3s;
 }
 
@@ -94,7 +98,7 @@ footer {
 
 	h2 {
 		font-size: 2rem;
-		margin-top: 24px;
+		margin-top: 0;
 		margin-bottom: 60px;
 	}
 }
